--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gatsby-image": "^3.0.0",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-offline": "^3.10.0",
-    "gatsby-plugin-postcss": "^3.0.0",
+    "gatsby-plugin-postcss": "^2.3.13",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-plugin-transition-link": "^1.20.5",
@@ -33,19 +33,17 @@
     "gatsby-remark-images": "^3.11.1",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-remark-smartypants": "^2.10.0",
-    "gatsby-schema-field-absolute-path": "^1.2.3",
     "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-remark": "^2.16.1",
     "gatsby-transformer-sharp": "^2.12.1",
     "gsap": "^3.6.0",
+    "jquery": "^3.6.0",
     "postcss": "^7.0.35",
     "prismjs": "^1.23.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^4.2.0",
-    "react-images-loaded": "^2.0.0",
-    "react-preloader-icon": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.1",
     "react-smooth-scrollbar": "^8.0.6",
