--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "deploy": "gatsby build && gh-pages -d public -b main"
   },
   "dependencies": {
-    "@fontsource/bodoni-moda": "^4.2.4",
+    "@fontsource/im-fell-french-canon-sc": "^4.2.2",
     "@fontsource/raleway": "^4.2.2",
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "autoprefixer": "^9.8.6",
@@ -27,7 +27,7 @@
     "gatsby-plugin-offline": "^3.10.0",
     "gatsby-plugin-postcss": "^2.3.13",
     "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.3",
+    "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-remark-copy-linked-files": "^2.10.0",
     "gatsby-remark-images": "^3.11.1",
