--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,18 @@
-name: Gatsby Publish
+name: Gatsby Publish # Name of your workflow
 
 on:
   push:
     branches:
-      - source
+      - source # The trigger of the this workflow
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Action uses Docker so only Linux is supported
     steps:
-      - uses: actions/checkout@v1
-      - uses: enriikke/gatsby-gh-pages-action@v2
+      - uses: actions/checkout@v1 # Checkout your triggered branch
+      - uses: xmflsct/action-publish-gatsby@v1 # Uses this action to run further steps
         with:
-          access-token: ${{ secrets.PORTFOLIO }}
-          deploy-branch: gh-pages
-          
+          publishBranch: 'main' # Not required, default publishing branch is master
+          token: ${{ secrets.PORTFOLIO }} # Your personal access token of GitHub, read more below of how to obtain one and keep it safe
+          name: 'your name' # Not required, default to action's maintainer
+          email: 'your@email.com' # Not required, default to action's maintainer
