--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest # Action uses Docker so only Linux is supported
     steps:
       - uses: actions/checkout@v1 # Checkout your triggered branch
-      - uses: xmflsct/action-publish-gatsby@v2 # Uses this action to run further steps
+      - - uses: enriikke/gatsby-gh-pages-action@v2
         with:
           publishBranch: 'main' # Not required, default publishing branch is master
+          deploy-branch: 'gh-pages'
           token: ${{ secrets.PORTFOLIO }} # Your personal access token of GitHub, read more below of how to obtain one and keep it safe
-          name: 'your name' # Not required, default to action's maintainer
-          email: 'your@email.com' # Not required, default to action's maintainer
+          
