--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest # Action uses Docker so only Linux is supported
     steps:
-      - uses: actions/checkout@v1 # Checkout your triggered branch
+      - uses: actions/checkout@v2 # Checkout your triggered branch
       - uses: enriikke/gatsby-gh-pages-action@v2
         with:
-          deploy-branch: 'gh-pages'
           access-token: ${{ secrets.PORTFOLIO }} # Your personal access token of GitHub, read more below of how to obtain one and keep it safe
-          
+          deploy-branch: 'main'
