--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: enriikke/gatsby-gh-pages-action@v2
         with:
           access-token: ${{ secrets.PORTFOLIO }} # Your personal access token of GitHub, read more below of how to obtain one and keep it safe
-          deploy-branch: main
+          deploy-branch: source
