--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.1",
     "react-smooth-scrollbar": "^8.0.6",
+    "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
     "smooth-scrollbar": "^8.6.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
