--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "deploy": "gatsby build && gh-pages -d public -b main"
   },
   "dependencies": {
-    "@fontsource/im-fell-french-canon-sc": "^4.2.2",
+    "@fontsource/im-fell-french-canon-sc": "^4.2.3",
     "@fontsource/raleway": "^4.2.2",
-    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "@tailwindcss/postcss7-compat": "^2.0.4",
     "autoprefixer": "^9.8.6",
     "chokidar": "^3.5.1",
     "gatsby": "^2.32.11",
-    "gatsby-background-image": "^1.4.1",
-    "gatsby-image": "^3.0.0",
+    "gatsby-background-image": "^1.5.0",
+    "gatsby-image": "^3.1.0",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-offline": "^3.10.0",
     "gatsby-plugin-postcss": "^2.3.13",
@@ -42,6 +42,7 @@
     "prismjs": "^1.23.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-gsap": "^2.2.1",
     "react-helmet": "^6.0.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
@@ -49,12 +50,13 @@
     "react-smooth-scrollbar": "^8.0.6",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
-    "smooth-scrollbar": "^8.6.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
+    "smooth-scrollbar": "^8.6.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "tny-uturn": "^1.3.0",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^16.14.0",
     "gh-pages": "^3.1.0",
     "prettier": "^2.0.5",
     "use-resize-observer": "^7.0.0"
